# osm-water

./: .gitignore  Cargo.toml  README.md  README.txt
src/: database.rs  geo.rs  io.rs  main.rs  utils.rs  validate.rs
tests/: example.geojson
