[package]
name = "osm-waters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
geo = "0.27.0"
geo-types = "0.7.12"
geojson = "0.24.1"
postgres = "0.19.7"
serde_json = "1.0.1"
shapefile = "0.5.0"
wkt = "0.10.3"
