[package]
name = "osm-waters"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "http://jjcfrancis.co"
readme = "README.md"
repository = "https://github.com/jjcfrancisco/osm-waters"
description = "Obtain the necessary OSM water bodies for your project. It finds the water polygons that intersect your chosen geometries and outputs the results into GeoJSON."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
geo = "0.27.0"
geo-types = "0.7.12"
geojson = "0.24.1"
geozero-shp = "0.4.0"
postgres = "0.19.7"
serde_json = "1.0.1"
shapefile = "0.5.0"
wkt = "0.10.3"
