[package]
name = "osm-waters"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "http://jjcfrancis.co"
readme = "README.md"
repository = "https://github.com/jjcfrancisco/osm-waters"
description = "Obtain the necessary OSM water bodies for your project. It finds the water polygons that intersect your chosen geometries and outputs the results into GeoJSON."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4", features = ["derive"] }
ctrlc = "3.4.4"
geo = "0.27.0"
geo-types = "0.7.12"
geojson = "0.24.1"
reqwest = { version = "0.12.2", features = ["blocking"] }
serde_json = "1.0.1"
shapefile = "0.5.0"
tempfile = "3.10.1"
walkdir = "2.5.0"
zip-extensions = "0.6.2"
